# versed

./: .gitignore  LICENSE  OPENITI_TYPESETTER.md  README.md  package-lock.json  package.json  pyproject.toml
scripts/: convert_qcf_to_sqlite.py
src/versed/: __init__.py  _arabic.py  _structured_text.py  arabic.py  classify.py  cli.py  detect.py  extract.py  filtering.py  health.py  honorifics.py  layout.py  ligatures.py  markdown.py  openiti.py  openiti_parser.py  openiti_renderer.py  qcf.py  repair.py  routing.py  types.py
src/versed/_data/: transliterations.json
tests/: conftest.py  test_arabic.py  test_classify.py  test_cli.py  test_detect.py  test_extract.py  test_honorifics.py  test_layout_markdown.py  test_ligatures.py  test_openiti.py  test_openiti_parser.py  test_openiti_renderer.py  test_qcf.py  test_repair.py  test_routing.py
