[project]
name = "versed-pdf"
version = "1.1.0"
description = "Semantic PDF-to-Markdown engine for Arabic and bilingual texts with local routing and repair"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Versed Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["arabic", "pdf", "markdown", "text-extraction", "quran", "ocr", "nlp"]

dependencies = []  # Zero required deps! Pure Python for string repair.

[project.optional-dependencies]
pdf = ["pymupdf>=1.24.0"]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0.0"]
dev = ["pytest>=7.0"]

[project.scripts]
versed = "versed.cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
versed = ["_data/*.json", "_data/*.db", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
